# nutripae-cobertura

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  docker-compose.yml  dockerfile  pyproject.toml
alembic/: env.py
alembic/versions/: 28ba62128084_make_beneficiary_fields_optional.py  2ce470eaee22_add_parametric_tables.py  7329f9a77aa6_rename_codigo_dane_to_code_in_town_table.py  b22fe95f7af6_final_migration.py  c3c94f71aec0_crear_estructura_inicial.py  c811adaff648_add_campus_missing_fields.py  f5fee6be19a9_add_missing_tables.py
client_sdk/: package-lock.json  package.json
src/: database.py  main.py  seed.py
src/core/: config.py  dependencies.py
src/models/: __init__.py  beneficiary.py  coverage.py  document_type.py  etnic_group.py  town.py
src/pae_cobertura/: database.py  main.py  seed.py
src/pae_cobertura/core/: config.py
src/pae_cobertura/models/: __init__.py  beneficiary.py  benefit_type.py  campus.py  coverage.py  coveragePerMonth.py  department.py  disability_type.py  document_type.py  etnic_group.py  gender.py  grade.py  institution.py  site.py  town.py
src/pae_cobertura/repositories/: beneficiary.py  campus.py  coverage.py  department.py  institution.py  town.py
src/pae_cobertura/routers/: parametrics.py
src/pae_cobertura/routes/: beneficiary.py  campus.py  coverage.py  departments.py  institutions.py  towns.py
src/pae_cobertura/schemas/: beneficiary.py  campus.py  coverage.py  departments.py  institutions.py  towns.py
src/pae_cobertura/services/: beneficiary.py  campus.py  coverage.py  department.py  institution.py  town.py
src/repositories/: beneficiary.py  campus.py  coverage.py  department.py  institution.py  town.py
src/routes/: beneficiary.py  campus.py  coverage.py  departments.py  institutions.py  parametrics.py  towns.py
src/schemas/: beneficiary.py  campus.py  coverage.py  departments.py
src/services/: beneficiary.py  campus.py  coverage.py  department.py  institution.py  town.py
