[project]
name = "pae-cobertura"
version = "0.1.0"
description = ""
authors = [
    {name = "srestrero",email = "srestreporo@unal.edu.co"}
]
readme = "README.md"
requires-python = ">=3.10, <4.0"
dependencies = [
    "fastapi[all] (>=0.115.12,<0.116.0)",
    "sqlmodel[all] (>=0.0.24,<0.0.25)",
    "alembic (>=1.16.1,<2.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "python-jose[cryptography] (>=3.3.0,<4.0.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "bcrypt (==3.2.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "prometheus-fastapi-instrumentator (>=7.1.0,<8.0.0)",
    "prometheus-client (==0.20.0)",
    "opentelemetry-distro (==0.45b0)",
    "opentelemetry-instrumentation-fastapi (==0.45b0)",
    "opentelemetry-instrumentation-logging (==0.45b0)",
    "opentelemetry-exporter-otlp (==1.24.0)",
    "uvicorn[standard] (>=0.34.3,<0.35.0)",
    "httpx (>=0.27.0,<1.0.0)"
]

[tool.poetry]
packages = [{include = "*", from = "src"}]


[tool.poetry.group.dev.dependencies]
commitizen = "^4.8.2"
pre-commit = "^4.2.0"
poethepoet = "^0.34.0"
faker = "^26.0.0"


[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "poetry"
update_changelog_on_bump = true
major_version_zero = true
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
dev = "uvicorn pae_cobertura.main:app --reload --app-dir src"
db-generate = "alembic revision --autogenerate"
db-migrate = "alembic upgrade head"
db-seed = { shell = "cd src && python -m pae_cobertura.seed" }
lint = "pre-commit run --all-files"
